updating metric plots

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,32 @@ vignettes/*.pdf
 .Renviron
 treeplot.png
 plain_tree.png
+slurm_submissions/calc_percent_tp_source.sub
+slurm_submissions/secondary_eighty_density_1to100.sub
+slurm_submissions/secondary_eightycorrect_density_1to100.sub
+slurm_submissions/secondary_quadruple_density_101to200.sub
+slurm_submissions/secondary_quadruple_density_131to260.sub
+slurm_submissions/secondary_quadruple_density_1to100.sub
+slurm_submissions/secondary_quadruple_density_261to390.sub
+slurm_submissions/secondary_quadruple_density_391to520.sub
+slurm_submissions/summarise_sim_results/0.3diff_stan.sub
+slurm_submissions/summarise_sim_results/0.6diff_stan.sub
+slurm_submissions/summarise_sim_results/16active_8year_0.3sim_finalcalc.sub
+slurm_submissions/summarise_sim_results/16active_8year_0.6diff_finalcalc.sub
+slurm_submissions/summarise_sim_results/16active_8year_1.75onlysim_finalcalc.sub
+slurm_submissions/summarise_sim_results/16active_8year_1.75sim_finalcalc.sub
+slurm_submissions/summarise_sim_results/16active_8year_3sim_finalcalc.sub
+slurm_submissions/summarise_sim_results/16active_8year_diffsim_finalcalc.sub
+slurm_submissions/summarise_sim_results/16active_8year_samediff_finalcalc.sub
+slurm_submissions/summarise_sim_results/7yrsamp_1.75_acc.sub
+slurm_submissions/summarise_sim_results/altsetting_1.75sim_finalcalc.sub
+slurm_submissions/summarise_sim_results/double_density_finalcalc.sub
+slurm_submissions/summarise_sim_results/double_density_stan.sub
+slurm_submissions/summarise_sim_results/dubclusters_1.75diffv1_summary_table.sub
+slurm_submissions/summarise_sim_results/dubclusters_finalcalc.sub
+slurm_submissions/summarise_sim_results/dubclusters_stan.sub
+slurm_submissions/summarise_sim_results/quadruple_density_finalcalc.sub
+slurm_submissions/summarise_sim_results/quadruple_density_stan.sub
+slurm_submissions/summarise_sim_results/samediff_stan.sub
+slurm_submissions/test_template.sub
+R/simulation_accuracy_and_performance/simulation_files/test_template.R
